Dropdown overlap issue

--- a/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
+++ b/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
@@ -79,6 +79,10 @@
 }
 
 ::ng-deep {
+  
+  .cdk-overlay-container{
+    z-index: 1 !important;
+}
 
   .customTable{
     sb-dashlets-filters{
